Fixes nav links css for dark mode (#1396)

--- a/frontend/src/_styles/editor/comment-notifications.scss
+++ b/frontend/src/_styles/editor/comment-notifications.scss
@@ -59,6 +59,7 @@
   .card-header, .card {
     border: 0 !important;
     box-shadow: none !important;
+    border-radius: 0 !important;
   }
   
   .count {
